<resources>
    <string name="app_name">Quiz App</string>
    <string name="title">General Knowledge</string>
    <string name="sub_title">Please tick the correct answers below!!!"</string>
    <string name="qtn_one">1. Which of the animal is refered to as the ship of the desert?</string>
    <string name="opt_goat">Goat</string>
    <string name="opt_camel">Camel</string>
    <string name="opt_cow">Cow</string>
    <string name="qtn_two">2. Which is the nearest star to planet earth?</string>
    <string name="opt_sun">Sun</string>
    <string name="opt_jupiter">Jupiter</string>
    <string name="opt_moon">Moon</string>
    <string name="qtn_three">3. Which is the heavier metal?</string>
    <string name="opt_gold">Gold</string>
    <string name="opt_silver">Silver</string>
    <string name="opt_iron">Iron</string>
    <string name="qtn_four">4. Which is the sensitive organ in our body?</string>
    <string name="opt_teeth">Teeth</string>
    <string name="opt_hair">Hair</string>
    <string name="opt_skin">Skin</string>
    <string name="qtn_five">5. Which is the largest river on the earth?</string>
    <string name="opt_stream">Stream</string>
    <string name="opt_lake">Lake</string>
    <string name="opt_nile">Nile</string>
    <string name="qtn_six">6. A noun is a name of any person, animal, place, or things</string>
    <string name="opt_true">True</string>
    <string name="opt_false">False</string>
    <string name="opt_others">Others</string>
    <string name="qtn_seven">7. Tick the following living things</string>
    <string name="opt_bird">Bird</string>
    <string name="opt_box">Box</string>
    <string name="opt_plant">Plant</string>
    <string name="qtn_eight">8. Entomology is the science that studies</string>
    <string name="edt_one">insect</string>
    <string name="qtn_nine">9. The Chief constituent of the gobar gas is</string>
    <string name="edt_two">methane</string>
    <string name="qtn_ten">10. The reaction which converts sugar solution into alcohol is an example of</string>
    <string name="edt_three">fermentation</string>
</resources>
